--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #121212;
+  background-color: #141b2b;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
