--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,13 @@ html {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.cell {
+  padding: 8px 24px;
+  font-size: 15px;
+}
+
+.compactCell {
+  padding: 1px 12px;
+  font-size: 14px;
+}
