minor ob polish

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,22 @@ html {
   padding: 1px 12px;
   font-size: 14px;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #909090;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #303030;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
