--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,13 @@ html {
 @tailwind utilities;
 
 .cell {
-  padding: 8px 24px;
+  padding: 8px 24px 2px 24px;
   font-size: 15px;
+}
+.oi {
+  padding: 2px 24px 8px 24px;
+  font-size: 12px;
+  opacity: 0.8;
 }
 
 .compactCell {
